--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body {
   font-family: Arial, sans-serif;
   background-color: #f0f0f0;
@@ -106,14 +105,14 @@ footer {
 }
 
 #username-container {
-  display: none; /* Paslėptas pradinėje būsenoje */
+  display: none;
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
 }
 
 #username-container.show {
-  display: flex; /* Atsiranda tik su klase "show" */
+  display: flex;
 }
 
 #username-input {
